ajustement des dimensions des Labels, track, margins pour javafx 16