@@ -1,4 +1,4 @@
 #bin/bash
 
 cd $(dirname $0)/..
-java -jar libs/lecteur_musique-1.0.jar
+java --module-path libs/ --add-modules javafx.controls,javafx.base,javafx.graphics,javafx.media,javafx.fxml -jar libs/lecteur_musique-1.0.jar
